[package]
name = "POSS-1_Downloader_And_Converter"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
csv = "1.3.1"
fitsio = { version = "0.21.7", features = ["array"] }
fitsrs = "0.3.4"
futures-util = "0.3.31"
image = "0.25.6"
indicatif = "0.18.0"
opencv = "0.95.1"
rayon = "1.11.0"
reqwest = { version = "0.12.23", features = ["stream"] }
tokio = { version = "1.47.1", features = ["full"] }

